--- a/studiousSheet.css
+++ b/studiousSheet.css
@@ -40,6 +40,15 @@ html, body {
     height: 14px;
 }
 
+#search {
+    background-color: rgba(85, 112, 147, 1);
+}
+
+#newSesh {
+    background-color: rgba(224, 225, 227, .1);
+
+}
+
 .card {
     /*Add Shadows for Card Effect*/
     box-shadow: 0 8px 4px rgba(0, 0, 0, .2);
@@ -47,6 +56,7 @@ html, body {
     margin: 12px;
     background-color: white;
 }
+
 
 /* On mouse-over, add a deeper shadow */
 .card:hover {
