--- a/studiousSheet.css
+++ b/studiousSheet.css
@@ -15,7 +15,7 @@
 
 #map {
     width: 50%;
-    height: 100%;
+    height: 93%;
     float: left;
 
 }
@@ -60,6 +60,10 @@ html, body {
 
 #newSesh:hover {
     box-shadow: 0 6px 6px 0 rgba(0,0,0,0.5);
+}
+
+#form {
+    height: 93%;
 }
 
 .card {
