Added Algolia Search (not currently hooked up to home)

--- a/studiousSheet.css
+++ b/studiousSheet.css
@@ -17,6 +17,7 @@
     width: 50%;
     height: 100%;
     float: left;
+    min-height: 100%;
 
 }
 
@@ -31,6 +32,7 @@ html, body {
     height: 100%;
     margin: 0;
     padding: 0;
+    overflow-y: hidden;
 }
 
 #nav input {
