--- a/studiousSheet.css
+++ b/studiousSheet.css
@@ -106,3 +106,11 @@ html, body {
     word-wrap: break-word;
 }
 
+#newSeshSubmit {
+    background-color: #2B4970;
+    color: white;
+    border: none;
+    padding: 8px;
+    margin: 8px;
+}
+
