--- a/studiousSheet.css
+++ b/studiousSheet.css
@@ -102,8 +102,8 @@ html, body {
 #purpose {
     height: 64px;
     text-align: left;
-    text-wrap: normal;
     word-wrap: break-word;
+    white-space: normal;
 }
 
 #newSeshSubmit {
